kubernetes/03_ingress/dep_one_nginx_clusterip.yaml
#https://docs.microsoft.com/en-us/azure/aks/kubernetes-walkthrough
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment-cluster-ip
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-ui-cluster-ip
  template:
    metadata:
      labels:
        app: my-ui-cluster-ip
    spec:
      containers:
      - name: my-container-cip
        image: handsondevops/my-sample-ui:1.0.1
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: my-ui-cluster-ip
  labels:
    app: my-ui-cluster-ip
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-tcp-idle-timeout: "4"
#    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
#    service.beta.kubernetes.io/azure-load-balancer-internal-subnet: "svc"
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: my-ui-cluster-ip
